microservices/session1/infra/k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: cparkhi16/ui
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: posts
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
