microservices/session1/infra/k8s/ingress_serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: gposts.com #posts.com
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/blog/post
        backend:
          service:
            name: post-service
            port: 
              number: 4001
      - pathType: Prefix
        path: /api/v1/blog/post/?(.*)/comment
        backend:
          service:
            name: comments-service
            port: 
              number: 4002
      - pathType: Prefix
        path: /api/v1/blog/post/query
        backend:
          service:
            name: query-service
            port: 
              number: 4003
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: ui-service
            port: 
              number: 3000
